Building up class sched, capping at 7 classes, formatting the info shown
